// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contentful extend node type generateImageSource default 1`] = `
Object {
  "format": "webp",
  "height": 210,
  "src": "test.png?w=420&h=210&fm=webp",
  "width": 420,
}
`;

exports[`contentful extend node type generateImageSource does not include corner by default 1`] = `
Object {
  "format": "webp",
  "height": 210,
  "src": "test.png?w=420&h=210&fm=webp",
  "width": 420,
}
`;

exports[`contentful extend node type generateImageSource supports corner radius 1`] = `
Object {
  "format": "webp",
  "height": 210,
  "src": "test.png?w=420&h=210&fm=webp&r=10",
  "width": 420,
}
`;

exports[`contentful extend node type generateImageSource transforms corner radius -1 to max 1`] = `
Object {
  "format": "webp",
  "height": 210,
  "src": "test.png?w=420&h=210&fm=webp&r=max",
  "width": 420,
}
`;
